--- a/foryou/index.html
+++ b/foryou/index.html
@@ -15,12 +15,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya</span>
+      <span>Klik love nya sayangg</span>
     </div>
 
     <script>
-      ucapan = `Selamat Ulang Tahun
-      wish u all the best, i love you ♥`;
+      ucapan = `Selamat Ulang Tahun dd
+      wish u all the best, i love youuu♥`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
@@ -29,4 +29,5 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
 
