--- a/foryou/index.html
+++ b/foryou/index.html
@@ -19,8 +19,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = `Selamat Ulang Tahun dd
-      wish u all the best, i love youuu♥`;
+      ucapan = ` hallo dd 🌹
+      HAPPY BIRTHDAY CINTAAA 💗
+      wish u all the best ✨
+      dd disana gabole sedih'ya 💪
+      i love youuu♥`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
@@ -29,5 +32,6 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </script>
   </body>
 </html>
+
 
 
